libreoffice (4:7.6.3~rc2~git20231116-1) UNRELEASED; urgency=medium

  * debian/control*in:
    - add missing Build-Profiles: <!nopython>
  * debian/rules:
    - bump libcmis build-dep to >= 0.6.1 
    - build against libcurl4-openssl-dev instead of gnutls

 -- Rene Engelhard <rene@debian.org>  Thu, 16 Nov 2023 17:47:17 +0100

libreoffice (4:7.6.3~rc1-2) experimental; urgency=medium

  * debian/rules:
    - readd fonts-crosextra-caladea build-dep; Cambria usage is back
  * debian/control.in:
    - duplicate Replaces: as Breaks: in -uiconfig-* (closes: #1055267)

 -- Rene Engelhard <rene@debian.org>  Fri, 03 Nov 2023 17:59:51 +0100

libreoffice (4:7.6.3~rc1-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/rules:
    - re-enable cmis; bump libcmis build-dep to >= 0.6.0

 -- Rene Engelhard <rene@debian.org>  Fri, 03 Nov 2023 06:14:16 +0100

libreoffice (4:7.6.2-5) experimental; urgency=medium

  * oops, reupload with correct control 

 -- Rene Engelhard <rene@debian.org>  Tue, 31 Oct 2023 05:03:27 +0000

libreoffice (4:7.6.2-4) experimental; urgency=medium

  * debian/patches/patches/orcus-make-reference-resolver-available.diff: add
    from upstream master; fix tests with orcus 0.19

  * debian/rules:
    - bump gcc build-deps to gcc defaulting to --disable-s390-excess-float-precision
      on s390x - the bridge test fails otherwise (with-Java still fails,
      though...)
  * debian/control: regen with proper Bugs:, oops

 -- Rene Engelhard <rene@debian.org>  Mon, 30 Oct 2023 18:57:35 +0000

libreoffice (4:7.6.2-3) experimental; urgency=medium

  * debian/patches/kahansum-test-SSE2.diff: backport from upstream
    libreoffice-7-6 branch to fix test failure on !amd64

 -- Rene Engelhard <rene@debian.org>  Wed, 18 Oct 2023 20:45:52 +0200

libreoffice (4:7.6.2-2) experimental; urgency=medium

  * debian/rules:
    - allow liborcus 0.19, it's supposed to be API/ABI-compatible with 0.18
