@@ -2,6 +2,7 @@ libreoffice (4:7.6.3~rc2~git20231116-1) UNRELEASED; urgency=medium
 
   * debian/control*in:
     - add missing Build-Profiles: <!nopython>
+    - add missing Build-Profiles: <!nojava>
   * debian/rules:
     - bump libcmis build-dep to >= 0.6.1 
     - build against libcurl4-openssl-dev instead of gnutls
